2008-11-13  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (mt_main_generate_button_event): Fix typo and
	increase double click delay. (Helps changing directories in gftp)

2008-11-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	Change to new interface descriptions.
	
	* po/POTFILES.in: Use new .ui files
	* po/POTFILES.skip: Ignore old .glade files

2008-11-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.2

2008-11-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.1 release.

2008-10-23  Gerd Kohlberger  <gerdk@svn.gnome.org>
	
	Migrate to GtkBuilder and remove libglade dependency.

	* configure.ac: Remove libglade check.
	* src/mt-main.c:
	* src/mt-main.h:
	* src/mt-ctw.c:
	* src/mt-ctw.h:
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c: Switch to GtkBuilder.
	* data/Makfile.am:
	* data/dwell-click-applet.ui:
	* data/pointer-capture-applet.ui:
	* data/mousetweaks.ui: New files.

2008-10-23  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix capitalization in warning dialog. Don't rely on
	gnome accessibility gconf key to dedect if AT support is enabled.
	Testing the return value of SPI_init() is enough and also works
	with GDM. 

2008-09-22 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.1

2008-09-22 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.24.0 release.

2008-09-12  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-cursor-manager.c: Remove cursor_set guard. Seems to get
	out of sync when grabs are involved.

2008-09-11  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/dwell-click-applet.glade: Mark tooltip for translation and
	change capitalization. Bug #551762.

2008-09-08 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.24.0

2008-09-08 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.92 release.
